$Id: History,v 1.22 2000-11-13 01:26:29 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 13 2000, M.Asai (run-V02-00-02)
- Introducing a capability of storing random number status file to other directory

Nov 9 2000, M.Asai (run-V02-00-01)
- add Retrieve/StorePhysicsTable and related methods 
  in G4VUserPhysicsList and modify BuildPhysicsTable method  (H.K.)
- add store/retreivePhysicsTable command in G4UserPhysicsListMessenger (H.K.) 
 
Jul 22 2000, M.Asai (run-V02-00-00)
- Modify G4RunManager and G4RunMessenger because of elimination of
  G4StateManager::Pause() and introducing new G4UImanager as state
  dependent class.

Dec 2 99, M.Asai (run-V00-01-04)
- G4RunManager displays the version number when it is constructed.

Nov 7 99, H.Kurashige (run-V00-01-03)
-  Comments are enriched for software reference manual.


Nov 4, 99, M.Asai (tag run-V00-01-02)
- Comments are enriched for software reference manual.

Oct 7, 99, J.Allison (tag run-V00-01-01)
- Removed -I$(G4BASE)/graphics_reps/include from GNUmakefile (no
  longer necessary after G4VVisManager moved to intercoms).

Jul 25, 99 M.Asai (tag run-V00-01-00)
- Store/restore the status of the random number engine to
  separate files
