@@ -1,4 +1,4 @@
-$Id: History,v 1.22 2000-11-13 01:26:29 asaim Exp $
+$Id: History,v 1.23 2000-11-14 23:52:57 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+- Add G4VModularPhysicsList and G4VPhysicsConstructor 
+  to modularize UserPhysicsList   (H.K)
 
 Nov 13 2000, M.Asai (run-V02-00-02)
 - Introducing a capability of storing random number status file to other directory
